[package]
name = "nog-bar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nog-client = { path = "../nog-client" }
iced = { git = "https://github.com/hecrj/iced", rev = "45778ed598c0d202f8e86c47a444fd671fb3abce", features = ["tokio"] }
