[package]
name = "nog-bar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { path = "../windows" }
nog-client = { path = "../nog-client" }
nog-iced = { path = "../nog-iced" }
raw-window-handle = "0.3.3"
