[package]
name = "nog-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nog-client = { path = "../nog-client" }
clap = "2.33.3"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
crossterm = "0.20.0"
