[package]
name = "nog-menu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
rgb = { path = "../rgb" }
nog-iced = { path = "../nog-iced" }
nog-client = { path = "../nog-client" }
windows = { path = "../windows" }
raw-window-handle = "0.3.3"
clap = "2.33.3"
fuzzy-matcher = "0.3.7"
