[package]
name = "nog-notif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { path = "../windows" }
rgb = { path = "../rgb" }
clap = "2.33.3"
nog-iced = { path = "../nog-iced" }
raw-window-handle = "0.3.3"
