[package]
edition = "2018"
name = "nog"
version = "0.1.0"

[dependencies]
timer = "0.2.0"
widestring = "0.4.3"
windows = { path = "../windows" }
log = "0.4.0"
fern = "0.6.0"
chrono = "0.4.19"
lazy_static = "1.4.0"
itertools = "0.10.1"
rgb = { path = "../rgb", features = ["lua"] }
mlua = { version = "0.6.2", features = ["luajit", "vendored", "serialize"] }
tray-item = "0.6.0"
notify = "4.0.17"
serde = "1.0"
serde_json = "1.0"
nog-protocol = { path = "../nog-protocol" }
ctrlc = "3.2.0"
dirs = "3.0.2"

[build-dependencies]
winres = "0.1.12"
